# SeeingTheUnknot

./: .gitignore  LICENSE  README.md  pyproject.toml
knot_data/: DATA_WIKI.md
knot_data/pd/: GoogleDeepmind_hard_unknots_dist.json  SeeingTheUnknot_knots.json  SeeingTheUnknot_unknots.json  pd.py  plot.py  run_pd.sh  run_sage.sh  single_plot.py
report/: acc-by-nc.py  main.aux  main.fdb_latexmk  main.fls  main.tex
report/tikz/NOV-MON-10/: cnn-fn.fdb_latexmk  cnn-fn.fls  example-diagrams.aux  example-diagrams.fdb_latexmk  example-diagrams.fls  example-diagrams.tex  lc.fdb_latexmk  lc.fls  lc.tex
report/tikz/NOV-MON-10/cnn/FN/: cnn-fn.fdb_latexmk  cnn-fn.fls  cnn-fn.tex
report/tikz/NOV-MON-10/cnn/FP/: cnn-fp.fdb_latexmk  cnn-fp.fls  cnn-fp.tex
report/tikz/NOV-MON-10/cnn/TN/: cnn-tn.tex
report/tikz/NOV-MON-10/cnn/TP/: cnn-tp.tex
report/tikz/NOV-MON-10/corrections/: 1.tex
report/tikz/NOV-MON-10/corrections/cnn/: cnn-corrections.tex
runs/cnn/trial_DATETIME/: trial_DATETIME_results.json
src/seeing-the-unknot/: .env.example  main.py
src/seeing-the-unknot/config/: __init__.py  config.py
src/seeing-the-unknot/constants/: constant.py
src/seeing-the-unknot/model/: evaluate.py  sweep.py  train.py  trial.py
src/seeing-the-unknot/schema/: dataset.py  result.py
src/seeing-the-unknot/utils/: cam_utils.py  data_utils.py  model_utils.py  utils.py  wandb_utils.py
