[project]
name = "knot-or-not"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy<2.0",
    "dotenv",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "timm",
    "scikit-learn",
    "wandb>=0.21.0",
    "pyhopper",
    "grad-cam",
    "matplotlib<3.10",
    "contourpy<1.3",
    "snappy>=3.2",
    "snappy-15-knots>=1.2.1",
]
