[project]
name = "knot-or-not"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "numpy",
    "dotenv",
    "torch",
    "torchvision",
    "timm",
    "scikit-learn",
    "grad-cam",
    "pyhopper",
    "contourpy<1.3",
    "snappy>=3.2",
    "snappy-15-knots>=1.2.1",
    "snakeviz"
]
